--- a/modules/pending_review/psychoed_abstinence_goal.qmd
+++ b/modules/pending_review/psychoed_abstinence_goal.qmd
@@ -61,8 +61,10 @@ These experiences don’t mean you’re failing, they mean you’re wrestling wi
 
 4.  **Talk It Out:** Share your mixed feelings with a counselor, sponsor, or trusted friend. Saying it out loud often makes the conflict feel less overwhelming.
 
+::: callout
 ## Remember
 
 Ambivalence is not a roadblock, it’s a stepping stone. By exploring both sides openly, you build insight and motivation that lead to lasting change. Over time, as you experience the benefits of sobriety, your commitment to abstinence will grow stronger and clearer.
 
 Recovery is a journey. It’s okay to take time, wrestle with doubts, and explore your feelings. What matters is that you keep moving forward.
+:::
