--- a/modules/pending_review/psychoed_future_efficacy.qmd
+++ b/modules/pending_review/psychoed_future_efficacy.qmd
@@ -57,8 +57,10 @@ Confidence doesn’t mean you never doubt yourself—it means you trust that you
 
 5.  **Lean on Support:** Confidence grows when others remind you of your strengths. Talk with supportive friends, peers, or mentors.
 
+::: callout
 ## Remember
 
 Confidence is not about being perfect or never doubting yourself—it’s about trusting your ability to keep trying. Each day you stay sober, use a coping skill, or get back up after a stumble, you’re proving to yourself that you can do this.
 
 Recovery is a journey, and confidence grows step by step. The more you practice, the stronger your belief in yourself will become.
+:::
