--- a/modules/pending_review/psychoed_past_use.qmd
+++ b/modules/pending_review/psychoed_past_use.qmd
@@ -47,8 +47,10 @@ Lapses don’t mean recovery isn’t working—they mean you’ve encountered a 
 
 5.  **Recommit to Your Goal:** Each slip is a chance to renew your commitment to sobriety with more insight and strength.
 
+::: callout
 ## Remember
 
 Lapses happen to many people in recovery—they are not the end of your journey. Think of them as speed bumps, not roadblocks. What matters most is how quickly you return to your path and what you learn along the way.
 
 Every time you pick yourself back up, you prove your resilience. Recovery is about progress, not perfection.
+:::
