--- a/modules/pending_review/psychoed_relationships.qmd
+++ b/modules/pending_review/psychoed_relationships.qmd
@@ -57,6 +57,8 @@ Healthy relationships can act as a protective factor, while relationships tied t
 
 - **Reflect on Relationship Patterns:** Take note of how relationships influence cravings or mood. Adjust your involvement with people or situations that consistently create risk.
 
+::: {.callout}
 ## Remember
 
 Relationships are a central part of life, and they can either support or challenge your recovery. By recognizing which connections are helpful and which are risky, and by using strategies to navigate social dynamics, you can build a network that strengthens your sobriety. Every healthy interaction reinforces your ability to live a fulfilling, alcohol-free life.
+:::
