--- a/modules/pending_review/psychoed_risky_situation.qmd
+++ b/modules/pending_review/psychoed_risky_situation.qmd
@@ -67,8 +67,9 @@ Again, this happens. The important part is recognizing it and taking steps to pr
 
 - **Have an Exit Strategy:** Know when and how you can remove yourself from a risky situation if it becomes too tempting.
 
+::: {.callout}
 ## Remember
 
 Risky situations are a normal part of life, and encountering them doesn’t mean failure. By recognizing your personal triggers, planning in advance, and using effective coping strategies, you can navigate these situations safely. Each time you handle a risky situation successfully, your confidence and ability to stay sober grows stronger.
 
-
+:::
