--- a/modules/pending_review/grounding.qmd
+++ b/modules/pending_review/grounding.qmd
@@ -7,7 +7,7 @@ format: html
 
 This mindfulness practice engages all five senses to help you notice your immediate environment. By focusing outward you can ground your mind and body in the present moment. This exercise can be done anytime, anywhere. You don’t have to wait for stress or anxiety to practice; it can be used as a pleasant, neutral way to stay aware and present.
 
-![](https://github.com/jjcurtin/aud_support/blob/main/modules/images/grounding.png?raw=true)
+![](https://github.com/jjcurtin/aud_support/blob/main/modules/images/grounding.png?raw=true){fig-align="center"}
 
 ### How to Practice
 
@@ -41,7 +41,7 @@ Notice one taste fully and slowly. Pay full attention to the sensation and enjoy
 
 *Examples: a sip of tea, a square of chocolate, a piece of fruit.*
 
-::: {.callout-tip}
+::: callout-tip
 ### Tip
 
 Doing this exercise regularly will help you become more comfortable with the skill, so you can use it more effectively when you are feeling stressed or distressed.
