--- a/modules/pending_review/psychoed_craving.qmd
+++ b/modules/pending_review/psychoed_craving.qmd
@@ -3,19 +3,19 @@ title: "Craving psychoeducation"
 format: html
 ---
 
-# 🌊 **Understanding Cravings**
+# 🌊 Understanding Cravings
 
 As you work on changing your drinking, it’s normal to have urges or cravings for alcohol. A craving is when you feel the strong urge to drink, even though you don’t want to. This can show up as thoughts, emotions, or physical sensations that pull you toward drinking, even if part of you wants to stay sober.
 
 **Good news:** Cravings are short-lived, predictable, and controllable. With practice, they will get weaker, and you'll feel more confident in handling them when they pop up.
 
-### **What is a Craving?**
+### What is a Craving?
 
 A craving is a powerful feeling that pushes you to drink alcohol, even when you don’t want to. It can feel like a strong mental or physical need to drink. Cravings happen because of the long-term use of alcohol, and they can last for some time after you stop drinking.
 
 If you've had a lot of drinking in the past, cravings may come up more often or feel stronger. But don’t worry! Cravings are a normal part of recovery, and they happen at all stages of recovery.
 
-### **How Do Cravings Show Up?**
+### How Do Cravings Show Up?
 
 Cravings can look different for everyone. Here are some ways cravings might show up for you:
 
@@ -27,7 +27,7 @@ Cravings can look different for everyone. Here are some ways cravings might show
 
 -   **Behaviors:** You might find yourself lingering near places where alcohol is sold, or spending time with others who are drinking.
 
-### **Cravings Are Predictable**
+### Cravings Are Predictable
 
 Cravings don’t happen randomly. They can be triggered by certain situations or emotions. These triggers can be internal (how you’re feeling) or external (things around you).
 
@@ -37,19 +37,19 @@ Cravings don’t happen randomly. They can be triggered by certain situations or
 
 The more you recognize what causes your cravings, the better you can plan for them. Understanding what triggers your cravings can help you avoid or manage them.
 
-### **Cravings Are Temporary**
+### Cravings Are Temporary
 
 Cravings might feel intense, but here’s the important thing to remember: **they don’t last long**. Most cravings only last a few minutes. Think of a craving like a wave in the ocean. It starts small, gets bigger, and then crashes and disappears.
 
 Even though cravings can feel overwhelming at first, they are time-limited and will pass. The key is not giving in to the craving. The more you ignore the craving and choose not to drink, the weaker it becomes.
 
-### **Cravings Get Easier Over Time**
+### Cravings Get Easier Over Time
 
 At the start of your recovery, cravings may be stronger and more frequent. But over time, they will get weaker and less intense. Each time you resist the urge to drink, the craving loses power.
 
 Stopping alcohol use completely is the fastest way to get rid of cravings. If you don’t reward craving with alcohol use, it will eventually go away. It’s like feeding a stray animal. If you stop feeding it, it will stop coming back.
 
-### **What Can You Do When a Craving Hits?**
+### What Can You Do When a Craving Hits?
 
 When you feel a craving, remember: it’s temporary and you can control how you respond. Here are some ways to deal with cravings:
 
@@ -61,8 +61,10 @@ When you feel a craving, remember: it’s temporary and you can control how you 
 
 4.  **Reach Out**: Talk to someone you trust, like a sponsor or a friend. Sometimes, just sharing how you feel can help.
 
-### **Remember: Cravings Don’t Last Forever**
+::: callout
+### Remember
 
 It’s completely normal to experience cravings in recovery. But the more you practice coping with them, the easier it will get. Cravings are like visitors—they come and go. With time and practice, you will get better at handling them.
 
 By staying sober, even when cravings are strong, you’ll find that the cravings become less powerful and easier to ignore. You’ve got this!
+:::
