--- a/modules/pending_review/recovery_checklist.qmd
+++ b/modules/pending_review/recovery_checklist.qmd
@@ -7,7 +7,7 @@ format: html
 
 This activity gives you a chance to notice the changes you’ve already made in your recovery. By checking the behaviors you practice and thinking about new actions you might try, you can celebrate your progress and identify areas to focus on next. Use this worksheet as a guide to reflect on what’s working well and where you might want to grow.
 
-#### 1. Check all the things that you do regularly or have done since choosing to stop drinking:
+#### Check all the things that you do regularly or have done since choosing to stop drinking:
 
 □ Schedule activities daily\
 □ Use thought stopping for cravings\
@@ -25,7 +25,8 @@ This activity gives you a chance to notice the changes you’ve already made in 
 □ Identify addictive behaviors\
 □ Avoid triggers (when possible)
 
-#### 2. Reflect on the following questions:
+::: callout
+#### Reflect on the following questions:
 
 -   What other behaviors have you decided to start since you entered recovery?
 
@@ -36,3 +37,4 @@ This activity gives you a chance to notice the changes you’ve already made in 
 -   Which behavior have you not begun yet?
 
 -   What might need to change for you to begin this behavior?
+:::
