--- a/modules/pending_review/thought_stopping_2.qmd
+++ b/modules/pending_review/thought_stopping_2.qmd
@@ -5,7 +5,7 @@ format: html
 
 ## Thought Stopping Continued
 
-You now know how **Thought stopping** provides a tool for disrupting the trigger → thought → craving → use process<!--refer to thought_stopping_1.qmd-->.
+You now know how **Thought stopping** provides a tool for disrupting the trigger → thought → craving → use process.
 
 Try the additional techniques below, and use the ones that work best for you:
 
@@ -17,7 +17,7 @@ As soon as you notice a thought about drinking or using, say **“STOP!”** out
 
 Picture a bright red stop sign in your mind when the thought begins. Hold the image for a few seconds and replace it with a healthy activity you can do instead.
 
-![](https://github.com/jjcurtin/aud_support/blob/main/modules/images/thought_stopping_2.png?raw=true)
+![](https://github.com/jjcurtin/aud_support/blob/main/modules/images/thought_stopping_2.png?raw=true){fig-align="center"}
 
 ### 3. Physical Action Interrupt
 
@@ -49,6 +49,8 @@ Quickly jot down the thought in a notebook. Writing externalizes the thought, ma
 
 Have a list of activities ready that you can do whenever a thought of using arises. Examples: going for a walk, calling a supportive friend, exercising, or practicing deep breathing.
 
+::: callout
 ### Remember
 
 Thought-stopping is a skill that improves with practice. The earlier you catch a thought, the easier it is to stop before it grows into a craving. Make these exercises part of your daily routine to strengthen your ability to respond to triggers and maintain control over your recovery.
+:::
