--- a/modules/pending_review/trigger_behavior_record.qmd
+++ b/modules/pending_review/trigger_behavior_record.qmd
@@ -5,11 +5,13 @@ format: html
 
 ## Tracking Triggers, Thoughts, and Behaviors
 
-Use this worksheet to track the people, places, feelings, and situations that prompt cravings. Record what you thought, how you felt, what you did, and the outcomes. Reflecting on these patterns can help you make healthier choices and strengthen your recovery.
+Use this worksheet to track the people, places, feelings, and situations that prompt cravings today. Record what you thought, how you felt, what you did, and the outcomes. Reflecting on these patterns can help you make healthier choices and strengthen your recovery.
 
+::: callout
 | Triggers | Thoughts and Feelings | Behavior | Positive Consequences | Negative Consequences |
 |---------------|---------------|---------------|---------------|---------------|
 | *What sets me up to use?* | *What was I thinking? What was I feeling?* | *What did I do then?* | *What positive things happened?* | *What negative things happened?* |
 |  |  |  |  |  |
 |  |  |  |  |  |
 |  |  |  |  |  |
+:::
