--- a/modules/pending_review/urge_surfing.qmd
+++ b/modules/pending_review/urge_surfing.qmd
@@ -11,6 +11,7 @@ This technique can be used to stop or reduce alcohol use, emotional reactions su
 
 ![](https://github.com/jjcurtin/aud_support/blob/main/modules/images/urge_surfing.PNG?raw=true)
 
+::: callout
 ### How to practice urge surfing
 
 #### 1. Acknowledge you are having an urge.
@@ -28,3 +29,4 @@ This technique can be used to stop or reduce alcohol use, emotional reactions su
 -   Some discomfort is okay. I don't have to change it.
 
 -   An urge is temporary. Like any other feeling, it will pass on its own.
+:::
